--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-pandas
-numpy
-sklearn
-openpyxl
+flask==2.0.1
+pandas==1.3.3
+numpy==1.21.2
+scikit-learn==1.0
+openpyxl==3.0.9
+flask-cors==3.0.10
